# realtime-chat

./: Cargo.toml
src/: codec.rs  frame.rs  lib.rs  main.rs  message.rs  utils.rs
src/commands/: help.rs  me.rs  mod.rs  whisper.rs
src/domain/: connection.rs  message.rs  mod.rs  peer.rs  peer_connection.rs  shared.rs  tripcode.rs  username.rs
src/errors/: command_error.rs  message_error.rs  mod.rs  username_error.rs
src/traits/: command_apply.rs  mod.rs
