[package]
name = "realtime-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
async-trait = "0.1.68"
bytes = "1.4.0"
futures = "0.3.28"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
fake = "2.6.1"
